updated descriptions and cleaned code

--- a/WebVisualizations/style.css
+++ b/WebVisualizations/style.css
@@ -14,7 +14,7 @@ h1,h2{
 
 .navbar-dark .navbar-nav>li {
     margin-right: 10px;
-    color:blue;
+    color:orange;
 }
 
 button{
@@ -22,8 +22,21 @@ button{
 }
 
 #citytable{
-    background-color:rgb(255, 153, 0);
+    background-color:orange;
 }
+
+
+#rowhomeimg{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+#colhomimg{
+    flex: 25%;
+    padding: 0 4px;
+  }
+
 
 
 /*--------------- media queries below ------------------*/
@@ -31,7 +44,7 @@ button{
 
 
 /* makes the navbar items disapear and replaces them with a hamburger button */
-@media(max-width:580px){
+@media(max-width:640px){
     .navbar-expand-sm .navbar-nav{
         display:none;
     }
@@ -40,3 +53,17 @@ button{
     }
 }
 
+@media(min-width:992px){
+    #homeimg{
+        display: block;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-top: 2%;
+        margin-bottom: 2%;
+        width: 100%;
+    }
+
+
+
+
+}
